[gd_scene load_steps=15 format=2]

[ext_resource path="res://menus/settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://menus/main_menu.gd" type="Script" id=2]
[ext_resource path="res://common.theme" type="Theme" id=3]
[ext_resource path="res://menus/load_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Alice-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://menus/main_texture.png" type="Texture" id=6]
[ext_resource path="res://menus/SWAV_17.swav.wav" type="AudioStream" id=7]
[ext_resource path="res://music/heroic dawning.mp3" type="AudioStream" id=8]
[ext_resource path="res://levels/level1.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
first_level = ExtResource( 9 )
new_game = NodePath("MarginContainer/GridContainer/VBoxContainer/NewGame")
quit = NodePath("MarginContainer/GridContainer/VBoxContainer/Quit")
loadb = NodePath("MarginContainer/GridContainer/VBoxContainer/Load")
settings = NodePath("MarginContainer/GridContainer/VBoxContainer/Settings")

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 20
custom_constants/margin_left = 5
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 20.0
margin_right = 251.0
margin_bottom = 189.0
columns = 3

[node name="Control" type="Control" parent="MarginContainer/GridContainer"]
margin_right = 79.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="MarginContainer/GridContainer"]
margin_left = 83.0
margin_right = 162.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="MarginContainer/GridContainer"]
margin_left = 166.0
margin_right = 245.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer"]
margin_top = 69.0
margin_right = 79.0
margin_bottom = 169.0
rect_min_size = Vector2( 50, 100 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGame" type="Button" parent="MarginContainer/GridContainer/VBoxContainer"]
margin_right = 79.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 15 )
focus_neighbour_bottom = NodePath("../Load")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "New Game"

[node name="Load" type="Button" parent="MarginContainer/GridContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 79.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 15 )
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../Settings")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Load"

[node name="Settings" type="Button" parent="MarginContainer/GridContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 79.0
margin_bottom = 74.0
rect_min_size = Vector2( 50, 15 )
focus_neighbour_top = NodePath("../Load")
focus_neighbour_bottom = NodePath("../Quit")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/GridContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 79.0
margin_bottom = 100.0
rect_min_size = Vector2( 50, 15 )
focus_neighbour_top = NodePath("../Settings")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="MarginContainer/GridContainer"]
margin_left = 83.0
margin_top = 69.0
margin_right = 162.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control5" type="Control" parent="MarginContainer/GridContainer"]
margin_left = 166.0
margin_top = 69.0
margin_right = 245.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 20.0
margin_right = 251.0
margin_bottom = 189.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 20.0
margin_right = 251.0
margin_bottom = 189.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings2" parent="MarginContainer/CenterContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_top = 84.0
margin_right = 123.0
margin_bottom = 84.0
in_main = true

[node name="LoadScreen" parent="MarginContainer/CenterContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_top = 84.0
margin_right = 123.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 174.0
margin_top = 176.0
margin_right = 251.0
margin_bottom = 189.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
text = "Eitan Tsukerman"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.0
bus = "Global"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0
autoplay = true
bus = "Global"

[connection signal="pressed" from="MarginContainer/GridContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
